--- a/.github/workflows/build and publish.yaml
+++ b/.github/workflows/build and publish.yaml
@@ -1,7 +1,8 @@
-name: Build and Push to Artifact Registry
+name: 'Deploy to GAR'
 
 on:
   [workflow_dispatch]
+
 env:
   PROJECT_ID: sharky-enterprises-450214
   REGION: "us-central1"
