--- a/.github/workflows/build and publish.yaml
+++ b/.github/workflows/build and publish.yaml
@@ -31,7 +31,7 @@ jobs:
           gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
 
       - name: Build image
-        run: docker build . --file . --tag ${{ env.GAR_LOCATION }}:latest
+        run: docker build . --tag ${{ env.GAR_LOCATION }}:latest
         
 
       - name: Push image
