--- a/.github/workflows/build and publish.yaml
+++ b/.github/workflows/build and publish.yaml
@@ -35,4 +35,4 @@ jobs:
         
 
       - name: Push image
-        run: docker push ${{ env.GAR_LOCATION }}
+        run: docker push ${{ env.GAR_LOCATION }}:latest
