--- a/.github/workflows/build and publish.yaml
+++ b/.github/workflows/build and publish.yaml
@@ -31,8 +31,8 @@ jobs:
           gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
 
       - name: Build image
-        run: docker build . --tag ${{ env.GAR_LOCATION }}:latest
+        run: docker build . --tag ${{ env.GAR_LOCATION }}/app1:latest
         
 
       - name: Push image
-        run: docker push ${{ env.GAR_LOCATION }}:latest
+        run: docker push ${{ env.GAR_LOCATION }}/app1:latest
